Fix for layout issue with time filter title/button

--- a/arches/app/media/css/arches.css
+++ b/arches/app/media/css/arches.css
@@ -8678,12 +8678,17 @@ ul.pagination {
 }
 
 .time-wheel-title {
-    font-size: 17px;
+    font-size: 1.3em;
     margin-top: 30px;
 }
 
 .time-search-container .time-wheel-title:first-child {
     margin-top: 3px;
+}
+
+.time-search-container .filter-title {
+    margin-top: 7px;
+    font-size: 1.3em;
 }
 
 .time-wheel-title .pull-right {
